<resources>
    <string name="app_name">Help@Hand</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="ride">Take a Ride</string>

    <string-array name="interestedIn">
        <item>Student</item>
        <item>Primary Teaching</item>
        <item>Campaigning</item>
        <item>Senior Teaching</item>
        <item>Online Promotion</item>
    </string-array>
    <string-array name="rate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
